--- a/src/style.css
+++ b/src/style.css
@@ -9,5 +9,17 @@
   --clr-white: #fff;
 }
 body{
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--bg-color);
     font-family:"Poppins", sans-serif;
+}
+.container{
+    border-radius: 20px;
+    width: min(500px,80%);
+    background-color: var(--clr-white);
+    box-shadow: 0px 7px 5px 0px rgba(0,0,0,0.75);
+    height: 200px;
 }
