--- a/src/style.css
+++ b/src/style.css
@@ -31,4 +31,30 @@ form{
     background-color: var(--clr-white);
     box-shadow: 0px 7px 5px 0px rgba(0,0,0,0.75);
     height: 200px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap:20px;
+}
+.container form{
+    display: flex;
+    flex-direction: row;
+    gap:5px;
+}
+.container form input{
+    width: 70px;
+    height: 50px;
+}
+.submit-button{
+    border-radius: 5px;
+    background-color: var(--bg-color);
+    border: none;
+    padding: 15px;
+    color:var(--clr-white);
+    font-family:"Poppins", sans-serif;
+    gap:10px;
+}
+.container h2{
+    font-weight: 200;
 }
