--- a/src/style.css
+++ b/src/style.css
@@ -46,7 +46,7 @@ form {
   width: 70px;
   height: 50px;
 }
-.submit-button {
+button {
   border-radius: 5px;
   background-color: var(--bg-color);
   border: none;
